# ensemble

./: .gitignore  CLAUDE.md  COMMANDS.md  HANDOFF.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  spec.md  tsconfig.json  tsup.config.ts
.claude/: settings.json
.fctry/: capabilities-pending.json  changelog.md  config.json  doom-loop-state.json  experience-report-unknown.md  inbox.json  scenarios.md  spec.md  state.json
.fctry/retros/: 2026-04-18-chunks-1-3.md  (+2 more)
.interface-design/: system.md
src/: agents.ts  browse.ts  clients.ts  commands.ts  config.ts  discover.ts  doctor.ts  export.ts  hooks.ts  import-legacy.ts  index.ts  init.ts  lifecycle.ts  managed-settings.ts  migration.ts  operations.ts  projects.ts  registry.ts  schemas.ts  search.ts  secrets.ts  setlist.ts  settings.ts  skills.ts  snapshots.ts  sync.ts  usage.ts
tests/: agents-sync.test.ts  agents.test.ts  browse.test.ts  cli.test.ts  clients.test.ts  commands-sync.test.ts  commands.test.ts  config.test.ts  discover.test.ts  doctor-v2-checks.test.ts  doctor.test.ts  export.test.ts  hooks.test.ts  import-legacy.test.ts  init.test.ts  library-store.test.ts  migration.test.ts  operations.test.ts  profiles.test.ts  re-import-preservation.test.ts  registry.test.ts  schemas.test.ts  search.test.ts  secrets.test.ts  setlist.test.ts  settings.test.ts  skills.test.ts  snapshots.test.ts  sync.test.ts  test_config.py  test_doctor.py  test_init.py  test_new_features.py  test_operations.py  test_plugins.py  test_projects.py  test_registry.py  test_skills.py  test_sync.py  test_tui.py  (+2 more)
(+16 files in other folders)
